--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "koinos-gui-miner",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "productName": "Koinos Miner",
   "description": "The official Koinos GUI mining application.",
   "main": "main.js",
   "scripts": {
