#32: Added ethereum balance reporting and a framework of error reporting

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "eth-lightwallet": "^4.0.0",
-    "koinos-miner": "git@github.com:open-orchard/koinos-miner.git#26-tx-signing",
+    "koinos-miner": "git@github.com:open-orchard/koinos-miner.git",
     "web3": "^1.2.11"
   }
 }
