--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,7 @@ os:
   - windows
   
 env:
-  - TRAVIS_COMPILER="gcc"
-  - CC="${CC:-gcc}"
-  - CC_FOR_BUILD="${CC_FOR_BUILD:-gcc}"
+  - TRAVIS_COMPILER="gcc" CC="${CC:-gcc}" CC_FOR_BUILD="${CC_FOR_BUILD:-gcc}"
 
 before_install:
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco upgrade chocolatey; fi
