--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,7 @@ node_js:
 
 os:
   - windows
-  
-env:
-  - TRAVIS_COMPILER="gcc" CC="${CC:-gcc}" CC_FOR_BUILD="${CC_FOR_BUILD:-gcc}"
+  - linux
 
 before_install:
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco upgrade chocolatey; fi
