--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,18 @@ os:
   - linux
 
 before_install:
-  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco upgrade chocolatey; fi
-  
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then
+      choco upgrade chocolatey
+    else
+      sudo apt update
+    fi
+
 install:
-  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then ci/install.bat; fi
-  
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then
+      ci/install.bat
+    fi
+
 script:
-  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then ci/build.bat; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then
+      ci/build.bat
+    fi
