--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,17 @@ os:
 
 before_install:
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then
-      choco upgrade chocolatey
+      choco upgrade chocolatey;
     else
-      sudo apt update
+      sudo apt update;
     fi
 
 install:
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then
-      ci/install.bat
+      ci/install.bat;
     fi
 
 script:
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then
-      ci/build.bat
+      ci/build.bat;
     fi
