--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,11 @@ before_install:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update -qq; fi
 
 install:
-  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then ci/install.bat; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then ci/install_win.bat; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then ci/install_linux.sh; fi
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then ci/install_osx.sh; fi
 
 script:
-  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then ci/build.bat; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then ci/build_win.bat; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then ci/build_linux.sh; fi
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then ci/build_osx.sh; fi
