--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,8 @@ script:
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then ci/build_win.bat; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then ci/build_linux.sh; fi
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then ci/build_osx.sh; fi
+
+after_success:
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then ci/after_success_win.bat; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then ci/after_success_linux.sh; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then ci/after_success_osx.sh; fi
