--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "eth-lightwallet": "^4.0.0",
+    "ethereum-qr-code": "^0.3.0",
     "koinos-miner": "git@github.com:open-orchard/koinos-miner.git",
     "web3": "^1.2.11"
   }
