--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "rm node_modules/keccak/bindings.js node_modules/secp256k1/bindings.js node_modules/eth-lightwallet/node_modules/keccak/bindings.js node_modules/eth-lightwallet/node_modules/secp256k1/bindings.js"
   },
   "repository": {
     "type": "git",
