--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,15 @@ language: node_js
 node_js:
   - "12"
 
-os:
-  - osx
-  - linux
-  - windows
+jobs:
+  include:
+    - os: osx
+      osx_image: xcode11.3
+      compiler: gcc
+    - os: linux
+      dist: focal
+      compiler: gcc
+    - os: windows
 
 before_install:
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco upgrade chocolatey; fi
