--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "smart-contract"
   ],
   "author": "OpenOrchard, Inc.",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/open-orchard/koinos-gui-miner/issues"
   },
