--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eth-lightwallet": "^4.0.0",
     "ethereum-qr-code": "^0.3.0",
     "ethereumjs-tx": "^2.1.2",
-    "koinos-miner": "git@github.com:open-orchard/koinos-miner.git",
+    "koinos-miner": "https://github.com/open-orchard/koinos-miner.git",
     "web3": "^1.2.11"
   }
 }
